--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,9 +26,10 @@ jobs:
       - name: Commit to github pages branch
         run: |
           git clone https://github.com/${{ github.repository }} --branch gh-pages --single-branch gh-pages
+          cp CNAME docs/_build/html/
+          touch docs/_build/html/.nojekyll
           rsync -av --delete --exclude=/.git/ docs/_build/html/ gh-pages
           cd gh-pages
-          touch .nojekyll
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add -A
